# i3-ratiosplit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  settings.rs
