[package]
name = "i3-ratiosplit"
version = "0.1.0"
authors = ["Fredric Silberberg <fred@silberberg.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rust-ini = "0.16.0"
simplelog = "^0.7.6"
shellexpand = "2.1.0"

[dependencies.i3ipc]
version = "0.10.1"
features = ["i3-4-14"]
